GramaticaParser.py
# Generated from Gramatica.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class GramaticaParser ( Parser ):

    grammarFileName = "Gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'", "'if'", "'else'", 
                     "'end'", "'while'", "'loop'", "'fun'", "'return'", 
                     "'new'", "'string'", "'int'", "'char'", "'bool'", "'and'", 
                     "'or'", "'not'", "'<'", "'>'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "','", 
                     "':'", "'>='", "'<='", "'='", "'<>'", "'.'" ]

    symbolicNames = [ "<INVALID>", "OP_BOOL", "OP_REL", "COMMENT", "LINE_COMMENT", 
                      "NL", "LITNUMERAL", "LITSTRING", "LITCHAR", "TRUE", 
                      "FALSE", "IF", "ELSE", "END", "WHILE", "LOOP", "FUN", 
                      "RETURN", "NEW", "STRING", "INT", "CHAR", "BOOL", 
                      "AND", "OR", "NOT", "LESS", "GREATER", "LEFTPAREN", 
                      "RIGHTPAREN", "LEFTBRACKET", "RIGHTBRACKET", "LEFTBRACE", 
                      "RIGHTBRACE", "PLUS", "MINUS", "STAR", "DIV", "COMMA", 
                      "COLON", "GREATEREQUAL", "LESSEQUAL", "EQUAL", "DIFFERENT", 
                      "DOT", "ID", "WS" ]

    RULE_programa = 0
    RULE_comando = 1
    RULE_listadecl = 2
    RULE_decl = 3
    RULE_nl = 4
    RULE_glbal = 5
    RULE_funcion = 6
    RULE_listaBloque = 7
    RULE_bloque = 8
    RULE_listaComando = 9
    RULE_params = 10
    RULE_parametro = 11
    RULE_tipobase = 12
    RULE_tipo = 13
    RULE_var = 14
    RULE_declvar = 15
    RULE_cmdif = 16
    RULE_cmdwhile = 17
    RULE_cmdasign = 18
    RULE_llamada = 19
    RULE_listaexp = 20
    RULE_cmdreturn = 21
    RULE_op1 = 22
    RULE_op2 = 23
    RULE_exprAritmetica = 24
    RULE_termAritmetico = 25
    RULE_factorAritmetico = 26
    RULE_exprRelacional = 27
    RULE_termRelacional = 28
    RULE_exp = 29

    ruleNames =  [ "programa", "comando", "listadecl", "decl", "nl", "glbal", 
                   "funcion", "listaBloque", "bloque", "listaComando", "params", 
                   "parametro", "tipobase", "tipo", "var", "declvar", "cmdif", 
                   "cmdwhile", "cmdasign", "llamada", "listaexp", "cmdreturn", 
                   "op1", "op2", "exprAritmetica", "termAritmetico", "factorAritmetico", 
                   "exprRelacional", "termRelacional", "exp" ]

    EOF = Token.EOF
    OP_BOOL=1
    OP_REL=2
    COMMENT=3
    LINE_COMMENT=4
    NL=5
    LITNUMERAL=6
    LITSTRING=7
    LITCHAR=8
    TRUE=9
    FALSE=10
    IF=11
    ELSE=12
    END=13
    WHILE=14
    LOOP=15
    FUN=16
    RETURN=17
    NEW=18
    STRING=19
    INT=20
    CHAR=21
    BOOL=22
    AND=23
    OR=24
    NOT=25
    LESS=26
    GREATER=27
    LEFTPAREN=28
    RIGHTPAREN=29
    LEFTBRACKET=30
    RIGHTBRACKET=31
    LEFTBRACE=32
    RIGHTBRACE=33
    PLUS=34
    MINUS=35
    STAR=36
    DIV=37
    COMMA=38
    COLON=39
    GREATEREQUAL=40
    LESSEQUAL=41
    EQUAL=42
    DIFFERENT=43
    DOT=44
    ID=45
    WS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listadecl(self):
            return self.getTypedRuleContext(GramaticaParser.ListadeclContext,0)


        def EOF(self):
            return self.getToken(GramaticaParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.NL)
            else:
                return self.getToken(GramaticaParser.NL, i)

        def getRuleIndex(self):
            return GramaticaParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = GramaticaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            print("Comenzó un nuevo programa")
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GramaticaParser.NL:
                self.state = 61
                self.match(GramaticaParser.NL)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.listadecl()
            self.state = 68
            self.match(GramaticaParser.EOF)
            print("Fin del programa")
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tipoComando = None

        def cmdif(self):
            return self.getTypedRuleContext(GramaticaParser.CmdifContext,0)


        def cmdwhile(self):
            return self.getTypedRuleContext(GramaticaParser.CmdwhileContext,0)


        def cmdasign(self):
            return self.getTypedRuleContext(GramaticaParser.CmdasignContext,0)


        def cmdreturn(self):
            return self.getTypedRuleContext(GramaticaParser.CmdreturnContext,0)


        def llamada(self):
            return self.getTypedRuleContext(GramaticaParser.LlamadaContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_comando

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = GramaticaParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.cmdif()
                localctx.tipoComando="Condicion"
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.cmdwhile()
                localctx.tipoComando="Repeticion"
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.cmdasign()
                localctx.tipoComando="Asignacion"
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.cmdreturn()
                localctx.tipoComando="Retornar"
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.llamada()
                localctx.tipoComando="Llamada"
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListadeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(GramaticaParser.DeclContext,0)


        def listadecl(self):
            return self.getTypedRuleContext(GramaticaParser.ListadeclContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_listadecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListadecl" ):
                return visitor.visitListadecl(self)
            else:
                return visitor.visitChildren(self)




    def listadecl(self):

        localctx = GramaticaParser.ListadeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_listadecl)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                print("Empezó la declaración")
                self.state = 89
                self.decl()
                self.state = 90
                self.listadecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcion(self):
            return self.getTypedRuleContext(GramaticaParser.FuncionContext,0)


        def glbal(self):
            return self.getTypedRuleContext(GramaticaParser.GlbalContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = GramaticaParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramaticaParser.FUN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.funcion()
                pass
            elif token in [GramaticaParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.glbal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(GramaticaParser.NL, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_nl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNl" ):
                return visitor.visitNl(self)
            else:
                return visitor.visitChildren(self)




    def nl(self):

        localctx = GramaticaParser.NlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(GramaticaParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlbalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declvar(self):
            return self.getTypedRuleContext(GramaticaParser.DeclvarContext,0)


        def nl(self):
            return self.getTypedRuleContext(GramaticaParser.NlContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_glbal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlbal" ):
                return visitor.visitGlbal(self)
            else:
                return visitor.visitChildren(self)




    def glbal(self):

        localctx = GramaticaParser.GlbalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_glbal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.declvar()
            self.state = 102
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self):
            return self.getToken(GramaticaParser.FUN, 0)

        def ID(self):
            return self.getToken(GramaticaParser.ID, 0)

        def LEFTPAREN(self):
            return self.getToken(GramaticaParser.LEFTPAREN, 0)

        def params(self):
            return self.getTypedRuleContext(GramaticaParser.ParamsContext,0)


        def RIGHTPAREN(self):
            return self.getToken(GramaticaParser.RIGHTPAREN, 0)

        def nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.NlContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.NlContext,i)


        def listaBloque(self):
            return self.getTypedRuleContext(GramaticaParser.ListaBloqueContext,0)


        def END(self):
            return self.getToken(GramaticaParser.END, 0)

        def COLON(self):
            return self.getToken(GramaticaParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(GramaticaParser.TipoContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_funcion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = GramaticaParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(GramaticaParser.FUN)
            self.state = 105
            self.match(GramaticaParser.ID)
            self.state = 106
            self.match(GramaticaParser.LEFTPAREN)
            self.state = 107
            self.params()
            self.state = 108
            self.match(GramaticaParser.RIGHTPAREN)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GramaticaParser.COLON:
                self.state = 109
                self.match(GramaticaParser.COLON)
                self.state = 110
                self.tipo()


            self.state = 113
            self.nl()
            self.state = 114
            self.listaBloque()
            self.state = 115
            self.match(GramaticaParser.END)
            self.state = 116
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaBloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(GramaticaParser.BloqueContext,0)


        def listaBloque(self):
            return self.getTypedRuleContext(GramaticaParser.ListaBloqueContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_listaBloque

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaBloque" ):
                return visitor.visitListaBloque(self)
            else:
                return visitor.visitChildren(self)




    def listaBloque(self):

        localctx = GramaticaParser.ListaBloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listaBloque)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.bloque()
                self.state = 120
                self.listaBloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.NlContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.NlContext,i)


        def declvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.DeclvarContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.DeclvarContext,i)


        def listaComando(self):
            return self.getTypedRuleContext(GramaticaParser.ListaComandoContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_bloque

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = GramaticaParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 124
                    self.declvar()
                    self.state = 125
                    self.nl() 
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GramaticaParser.IF) | (1 << GramaticaParser.WHILE) | (1 << GramaticaParser.RETURN) | (1 << GramaticaParser.ID))) != 0):
                self.state = 132
                self.listaComando()


            self.state = 135
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.cmd = None # ComandoContext

        def nl(self):
            return self.getTypedRuleContext(GramaticaParser.NlContext,0)


        def listaComando(self):
            return self.getTypedRuleContext(GramaticaParser.ListaComandoContext,0)


        def comando(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_listaComando

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaComando" ):
                return visitor.visitListaComando(self)
            else:
                return visitor.visitChildren(self)




    def listaComando(self):

        localctx = GramaticaParser.ListaComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listaComando)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                localctx.cmd = self.comando()
                print("Aparecio un comando de tipo",localctx.cmd.tipoComando)
                self.state = 139
                self.nl()
                self.state = 140
                self.listaComando()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                localctx.cmd = self.comando()
                print("Aparecio un comando de tipo",localctx.cmd.tipoComando)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.ParametroContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.ParametroContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.COMMA)
            else:
                return self.getToken(GramaticaParser.COMMA, i)

        def getRuleIndex(self):
            return GramaticaParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = GramaticaParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramaticaParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.parametro()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GramaticaParser.COMMA:
                    self.state = 148
                    self.match(GramaticaParser.COMMA)
                    self.state = 149
                    self.parametro()
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [GramaticaParser.RIGHTPAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramaticaParser.ID, 0)

        def COLON(self):
            return self.getToken(GramaticaParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(GramaticaParser.TipoContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_parametro

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = GramaticaParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(GramaticaParser.ID)
            self.state = 159
            self.match(GramaticaParser.COLON)
            self.state = 160
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipobaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tipoDato = None

        def INT(self):
            return self.getToken(GramaticaParser.INT, 0)

        def BOOL(self):
            return self.getToken(GramaticaParser.BOOL, 0)

        def CHAR(self):
            return self.getToken(GramaticaParser.CHAR, 0)

        def STRING(self):
            return self.getToken(GramaticaParser.STRING, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_tipobase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipobase" ):
                return visitor.visitTipobase(self)
            else:
                return visitor.visitChildren(self)




    def tipobase(self):

        localctx = GramaticaParser.TipobaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tipobase)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramaticaParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(GramaticaParser.INT)
                localctx.tipoDato= "INT"
                pass
            elif token in [GramaticaParser.BOOL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(GramaticaParser.BOOL)
                localctx.tipoDato = "BOOL"
                pass
            elif token in [GramaticaParser.CHAR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.match(GramaticaParser.CHAR)
                localctx.tipoDato = "CHAR"
                pass
            elif token in [GramaticaParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 168
                self.match(GramaticaParser.STRING)
                localctx.tipoDato= "STRING"
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tipoDato = None
            self._tipobase = None # TipobaseContext
            self._tipo = None # TipoContext

        def tipobase(self):
            return self.getTypedRuleContext(GramaticaParser.TipobaseContext,0)


        def LEFTBRACKET(self):
            return self.getToken(GramaticaParser.LEFTBRACKET, 0)

        def RIGHTBRACKET(self):
            return self.getToken(GramaticaParser.RIGHTBRACKET, 0)

        def tipo(self):
            return self.getTypedRuleContext(GramaticaParser.TipoContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_tipo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = GramaticaParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_tipo)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GramaticaParser.STRING, GramaticaParser.INT, GramaticaParser.CHAR, GramaticaParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                localctx._tipobase = self.tipobase()
                localctx.tipoDato = localctx._tipobase.tipoDato
                pass
            elif token in [GramaticaParser.LEFTBRACKET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.match(GramaticaParser.LEFTBRACKET)
                self.state = 176
                self.match(GramaticaParser.RIGHTBRACKET)
                self.state = 177
                localctx._tipo = self.tipo()
                localctx.tipoDato = "[]" + localctx._tipo.tipoDato
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramaticaParser.ID, 0)

        def var(self):
            return self.getTypedRuleContext(GramaticaParser.VarContext,0)


        def LEFTBRACKET(self):
            return self.getToken(GramaticaParser.LEFTBRACKET, 0)

        def exp(self):
            return self.getTypedRuleContext(GramaticaParser.ExpContext,0)


        def RIGHTBRACKET(self):
            return self.getToken(GramaticaParser.RIGHTBRACKET, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
